code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-Jan-2010 Andrew Eddie
 # Fixed integrity of component_id's in jos_menu core and sample data.
 ^ Hard coded extension_id's in jos_extensions.
 ^ JDatabase::loadAssocList takes a second argument to return just the value of a column, not the whole row.

16-Jan-2010 Christophe Demko
^ Change the JHtmlAccess::section function to a JHtmlAccess::level function. Add the possibility to give extraoptions and to give an id
+ Add loading JFormField class in some fields
# Change the JFormFieldAccessLevel class to use JHtmlAccess::level function.
# Correct the output of JFormFieldRules (change JHtmlRules::assetFormWidget function)
# Correct the code of JFormFieldEditor (due to the use of SimpleXML)
# Correct the code of JForm::setFieldAttribute (due to the use of SimpleXML)
# Correct the code of JInstaller (due to the use of SimpleXML)
# Correct the code of JStream::prependFilter (Call-time pass-by-reference has been deprecated)
# Correct the code of JModelForm and JControllerForm to handle without errors checkin and checkout
# Correct the code of JTable::__construct to handle asset_id and access correctly
# Correct the code of JInstallerComponent to create admin menu
# Correct the code of JFormFieldTimeZone (#19441)
# Correct the code of the installed view in adminstrator com_languages (SimpleXML issue)
# Load third party translation when stored in extension folder for admin menu (#18664)
$ Add the Content_Page_View_article in administrator/language/en-GB/en-GB.com_content.ini
$ Change the language string JOption_Access_Show_All_Sections to JOption_Access_Show_All_Levels

15-Jan-2010 Mark Dexter
^ Add language field to category, contact, article, module, newsfeed, weblink (Jean-Marie Simonet)
^ Fix sample data article (Elin Waring)

13-Jan-2010 Mark Dexter
^ More sample data changes (Elin Waring)

13-Jan-2010 Hannes Papenberg