@@ -31,6 +31,7 @@ $ -> Language fix or change
  # Fixed integrity of component_id's in jos_menu core and sample data.
  ^ Hard coded extension_id's in jos_extensions.
  ^ JDatabase::loadAssocList takes a second argument to return just the value of a column, not the whole row.
+ + Added (temporarily) menus.resync in menus sub-controller to help repair incorrect component_id values in the jos_menu table.
 
 16-Jan-2010 Christophe Demko
 ^ Change the JHtmlAccess::section function to a JHtmlAccess::level function. Add the possibility to give extraoptions and to give an id
